<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arnav.memoryhelper.MainActivity"
    android:background="@drawable/gradient_list"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/Welcome"
            android:textColor="@color/black"
            android:textSize="15pt"
            android:textStyle="bold"
            android:textAlignment="center"/>


        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="17sp"
            android:layout_gravity="center"
            android:id="@+id/iv"
            android:src="@drawable/logo"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonp1"
            android:textColor="@color/black"
            android:fontFamily="@font/raleway_regular"
            android:textSize="7pt"


            />

        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language"
            android:textColor="@color/black"
            android:fontFamily="@font/raleway_regular"
            android:textSize="7pt"/>

        <Button
            android:id="@+id/settutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settutorialbutton"
            android:textColor="@color/black"
            android:fontFamily="@font/raleway_regular"
            android:textSize="7pt"

            />


        <Button
            android:id="@+id/Help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpbutton"
            android:textColor="@color/black"
            android:fontFamily="@font/mclaren_regular"
            android:textSize="10pt"
            android:background="@color/pink"/>



    </LinearLayout>

</RelativeLayout>